# SDL2-SimpleShooter

./: CMakeLists.txt  LICENSE  README.md  run.sh
Lisence/: LICENSE.txt
highscore/: highscores.txt
src/: bullet.cpp  bullet.h  controller.cpp  controller.h  debris.cpp  debris.h  enemy.cpp  enemy.h  enemy_bullet.cpp  enemy_bullet.h  explosion.cpp  explosion.h  game.cpp  game.h  gamestate.cpp  gamestate.h  main.cpp  object.cpp  object.h  player.cpp  player.h  pod.cpp  pod.h  renderer.cpp  renderer.h  sound_player.cpp  sound_player.h
ttf/: Lisence.txt
